# mace-unified

./: README.md  pyproject.toml
.github/workflows/: actions.yml
examples/: initial-model.toml
src/mace_core/: __init__.py
src/mace_core/modules/: __init__.py  backends.py  blocks.py
src/mace_jax/modules/: __init__.py  backends.py  blocks.py
src/mace_model/: __init__.py  build.py  cli.py  config.py  conversion.py  convert_cli.py  foundation.py  foundation_cli.py  legacy_checkpoint.py
src/mace_model/core/: __init__.py
src/mace_model/core/data/: __init__.py  neighborhood.py  utils.py
src/mace_model/core/modules/: __init__.py  backends.py  blocks.py  e3nn_adapter_utils.py  embeddings.py  irreps_utils.py  model_assembly.py  model_forward.py  model_init.py  models.py  native_symmetric_weights.py
src/mace_model/jax/: __init__.py  nnx_config.py  nnx_utils.py
src/mace_model/jax/adapters/: __init__.py
src/mace_model/jax/adapters/cuequivariance/: __init__.py  fully_connected_tensor_product.py  ir_dict.py  ir_dict_vendor.py  linear.py  symmetric_contraction.py  tensor_product.py  utility.py
src/mace_model/jax/adapters/e3nn/: __init__.py  irreps.py
src/mace_model/jax/adapters/e3nn/math/: __init__.py  _normalize_activation.py
src/mace_model/jax/adapters/e3nn/nn/: __init__.py  _activation.py  _extract.py  _fc.py  _gate.py
src/mace_model/jax/adapters/e3nn/o3/: __init__.py  _spherical_harmonics.py
src/mace_model/jax/adapters/e3nn/util/: __init__.py  jit.py
src/mace_model/jax/adapters/nnx/: __init__.py  torch.py
src/mace_model/jax/cli/: __init__.py  from_torch.py
src/mace_model/jax/modules/: __init__.py  backends.py  blocks.py  embeddings.py  models.py  radial.py  utils.py
src/mace_model/jax/tools/: __init__.py  bundle.py  lammps_exchange.py  model_builder.py  scatter.py
src/mace_model/torch/: __init__.py  model_utils.py
src/mace_model/torch/adapters/: __init__.py
src/mace_model/torch/adapters/cuequivariance/: __init__.py  fully_connected_tensor_product.py  linear.py  symmetric_contraction.py  tensor_product.py  utility.py
src/mace_model/torch/adapters/e3nn/: __init__.py  irreps.py
src/mace_model/torch/adapters/e3nn/math/: __init__.py  _normalize_activation.py
src/mace_model/torch/adapters/e3nn/nn/: __init__.py  (+4 more)
src/mace_model/torch/modules/: __init__.py  backends.py  blocks.py  embeddings.py  models.py  radial.py  utils.py
src/mace_model/torch/tools/: __init__.py  compile.py  scatter.py  utils.py
src/mace_torch/: __init__.py
src/mace_torch/modules/: backends.py  blocks.py
tests/: conftest.py  test_block_surface.py  test_blocks_parity.py  test_convert_cli.py  test_embeddings_parity.py  test_foundation_cli.py  test_legacy_checkpoint.py  test_legacy_parity.py  test_model_init_cli.py  test_model_parity.py  test_radial_parity.py  test_readout.py  test_torch_compile_tools.py  test_torch_model_utils.py  test_unified_readout.py
(+3 files in other folders)
