[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mace-model"
version = "0.1.0"
description = "MACE model implementations for PyTorch and JAX."
requires-python = ">=3.10"
dependencies = [
    "ase>=3.26",
    "cuequivariance>=0.8",
    "cuequivariance-jax>=0.8",
    "cuequivariance-torch>=0.8",
    "flax>=0.12",
    "jax>=0.8",
    "numpy>=2.4",
    "torch>=2.9",
    "tomli>=2; python_version < '3.11'",
]

[project.scripts]
mace-model-init = "mace_model.cli:main"
mace-model-convert = "mace_model.convert_cli:main"
mace-model-foundation = "mace_model.foundation_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mace_model*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
